examples/checker_tests/bad/dupfields-headerunion.p4
header_union hu {
    hdr h;
    hdr h;
}